# specleft-delta-demo

./: AGENT_RESULTS  LICENSE  PRD.md  PROMPTS.md  README.md  SKILLS.md
with-specleft/: approval.db  main.py  pyproject.toml
with-specleft-mcp/: .mcp.json  main.py  pyproject.toml
with-specleft-mcp/.specleft/: SKILL.md  SKILL.md.sha256
with-specleft-mcp/.specleft/specs/: feature-1-document-lifecycle.md  feature-3-delegation.md  (+3 more)
with-specleft-mcp/tests/: conftest.py  test_feature-1-document-lifecycle.py  test_feature-2-multi-reviewer-approval.py  test_feature-3-delegation.py  test_feature-4-escalation.py  test_feature-5-edge-cases.py
with-specleft/.specleft/results/: results_20260211_124524.json  results_20260211_125157.json  results_20260211_125247.json  results_20260211_125729.json  results_20260211_125856.json  results_20260211_143317.json  results_20260211_143439.json  results_20260211_143447.json
with-specleft/.specleft/specs/: feature-1-document-lifecycle.md  feature-2-multi-reviewer-approval.md  feature-3-delegation.md  feature-4-escalation.md  feature-5-edge-cases.md
with-specleft/app/: database.py  main.py  models.py  routes.py  schemas.py  services.py  state.py
with-specleft/tests/: conftest.py  helpers.py  test_feature-1-document-lifecycle.py  test_feature-2-multi-reviewer-approval.py  test_feature-3-delegation.py  test_feature-4-escalation.py  test_feature-5-edge-cases.py
without-specleft/: app.db  main.py  pyproject.toml
without-specleft-mcp/: SPEC.md  pyproject.toml
without-specleft-mcp/src/app/: app_factory.py  db.py
without-specleft-mcp/src/app/documents/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
without-specleft-mcp/src/app/notifications/: models.py  repository.py  service.py
without-specleft-mcp/tests/: conftest.py
without-specleft-mcp/tests/documents/: test_delegation.py  test_edge_cases.py  test_escalation.py  test_lifecycle.py  test_multi_reviewer.py  test_notifications_basic.py
without-specleft/app/: __init__.py  api.py  database.py  models.py  routes.py  schemas.py  services.py
without-specleft/tests/: __init__.py  conftest.py  test_delegation.py  test_document_lifecycle.py  test_edge_cases.py  test_escalation.py  test_multi_reviewer.py  test_workflow.py
(+1 files in other folders)
