[project]
name = "with-specleft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.30",
    "specleft>=0.2.2",
    "uvicorn>=0.30.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
