[project]
name = "without-specleft-mcp"
version = "0.1.0"
description = "Document approval workflow API"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "uvicorn>=0.27",
    "pytest>=8.0",
    "httpx>=0.26",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
