[project]
name = "without-specleft"
version = "0.1.0"
description = "Document approval workflow API"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.setuptools]
packages = ["app"]
